Add keysize to printcert output